--- a/dev_android_crie_18_apps/ATMConsultoria/app/src/main/res/values/strings.xml
+++ b/dev_android_crie_18_apps/ATMConsultoria/app/src/main/res/values/strings.xml
@@ -7,12 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_home">Principal</string>
+    <string name="menu_gallery">Serviços</string>
+    <string name="menu_slideshow">Clientes</string>
+    <string name="menu_share">Contato</string>
+    <string name="menu_send">Sobre</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
