--- a/dev_android_crie_18_apps/ATMConsultoria/app/src/main/res/values/strings.xml
+++ b/dev_android_crie_18_apps/ATMConsultoria/app/src/main/res/values/strings.xml
@@ -7,11 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Principal</string>
-    <string name="menu_gallery">Serviços</string>
-    <string name="menu_slideshow">Clientes</string>
-    <string name="menu_share">Contato</string>
-    <string name="menu_send">Sobre</string>
+    <string name="menu_principal">Principal</string>
+    <string name="menu_servicos">Serviços</string>
+    <string name="menu_clientes">Clientes</string>
+    <string name="menu_contato">Contato</string>
+    <string name="menu_sobre">Sobre</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
