--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/res/values/strings.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="digite_senha">Digite sua senha</string>
     <string name="button_logar">Logar</string>
     <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
+    <string name="digite_nome">Digite o seu nome</string>
+    <string name="button_cadastrar">Cadastrar</string>
 </resources>
