--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/res/values/strings.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
     <string name="digite_nome">Digite o seu nome</string>
     <string name="button_cadastrar">Cadastrar</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
