--- a/curso_dev_kotlin/app/src/main/res/values/strings.xml
+++ b/curso_dev_kotlin/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="dev_android_kotlin">Dev Android Kotlin</string>
 </resources>
