Identificação de elementos de interface

--- a/GastoViagem/app/src/main/res/values/strings.xml
+++ b/GastoViagem/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">GastoViagem</string>
-    <string name="distancia">Distância</string>
-    <string name="total_de_quilometros">Total de quilômetros</string>
-    <string name="preco">Preço</string>
-    <string name="preco_por_litro">Preço por litro</string>
-    <string name="autonomia">Autonomia</string>
-    <string name="quilometros_por_litro">Quilômetros por litro</string>
-    <string name="gasto_total">Seu gasto total será de:</string>
-    <string name="valor_total">R$ 0</string>
-    <string name="calcular">Calcular</string>
+    <string name="distance">Distância</string>
+    <string name="total_km">Total de quilômetros</string>
+    <string name="price">Preço</string>
+    <string name="price_per_liter">Preço por litro</string>
+    <string name="autonomy">Autonomia</string>
+    <string name="kms_per_liter">Quilômetros por litro</string>
+    <string name="total_spend">Seu gasto total será de:</string>
+    <string name="total_value">R$ 0</string>
+    <string name="calculate">Calcular</string>
 </resources>
