--- a/curso_dev_kotlin/Convidados/app/src/main/res/values/strings.xml
+++ b/curso_dev_kotlin/Convidados/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_absent">Absents</string>
     <string name="text_name">Name</string>
     <string name="text_present">Present</string>
+    <string name="text_presence">Presence</string>
     <string name="text_absent">Absent</string>
     <string name="button_save">Save</string>
 </resources>
